# pigskin

./: .coveragerc  .env.example  .flake8  .gitignore  INSTALL.md  Makefile  PRINT_MODULE_SUMMARY.md  README.md  mypy.ini  pigskin  pyproject.toml  pytest.ini  requirements-core.txt  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  setup.sh
.agents/: AGENT_MANAGER.md  promptexample
.agents/development/: ai-engineer.agent.md  backend.agent.md  code-review.agent.md  database.agent.md  frontend.agent.md  git-workflow.agent.md  refactoring.agent.md
.agents/devops/: cicd.agent.md  container.agent.md  deployment.agent.md  infrastructure.agent.md
.agents/docs/: api-docs.agent.md  codebase-knowledge.agent.md  runbook-postmortem.agent.md  technical-docs.agent.md
.agents/operations/: cost-optimization.agent.md  dependency.agent.md  incident-response.agent.md  monitoring.agent.md  sre.agent.md
.agents/orchestration/: analytics.agent.md  comms.agent.md  compliance.agent.md  orchestrator.agent.md
.agents/planning/: architecture.agent.md  product-manager.agent.md  project-manager.agent.md  requirements.agent.md  research.agent.md
.agents/quality/: bug-triage.agent.md  performance.agent.md  qa.agent.md  security.agent.md  test-automation.agent.md  test-definition.agent.md
.agents/scripts/: create_review_issues.py
.githooks/: commit-msg  pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: __init__.py  deps.py  main.py  sleeper_api.py
checkpoints/: sprint-12-plan-2026-05-13.md
classes/: __init__.py  auction.py  draft.py  draft_setup.py  owner.py  player.py  strategy.py  team.py  tournament.py
cli/: __init__.py  _lazy.py  commands.py  context.py  exceptions.py  main.py  options.py  output.py
config/: __init__.py  config_manager.py  settings.py
data/: __init__.py  fantasypros_loader.py
docs/: wiki-plan.md
lab/: README.md  pyproject.toml
lab/backtest/: __init__.py  auction_replay.py
lab/benchmarks/: __init__.py  reporter.py  runner.py
lab/data/: __init__.py  sleeper_auction_scraper.py  sleeper_client.py
lab/eval/: __init__.py
lab/experiments/: __init__.py  config.py
lab/promotion/: __init__.py  gate.py  promote.py
lab/results_db/: __init__.py  alembic.ini  models.py
lab/results_db/migrations/: env.py
lab/results_db/migrations/versions/: 7679204de4ae_baseline_adr004_schema.py  a1b2c3d4e5f6_add_real_auction_tables_issue_194.py
lab/simulation/: __init__.py  runner.py
lab/strategies/configs/: balanced.yaml  vor.yaml
results/: tournament_results_20260422_164447.json  tournament_results_20260422_164456.json  tournament_results_20260428_122114.json  tournament_results_20260428_122125.json  tournament_results_20260428_125826.json  tournament_results_20260428_125907.json  tournament_results_20260428_125929.json  tournament_results_20260428_143442.json  tournament_results_20260428_143816.json  tournament_results_20260428_151715.json  tournament_results_20260428_153750.json  tournament_results_20260428_154835.json  tournament_results_20260428_155036.json  tournament_results_20260429_091215.json  tournament_results_20260429_114043.json  tournament_results_20260429_114159.json
services/: __init__.py  bid_recommendation_service.py  draft_loading_service.py  sleeper_draft_service.py  tournament_service.py
strategies/: __init__.py  adaptive_strategy.py  aggressive_strategy.py  balanced_strategy.py  base_strategy.py  basic_strategy.py  conservative_strategy.py  elite_hybrid_strategy.py  enhanced_vor_strategy.py  gridiron_sage_strategy.py  hybrid_strategies.py  improved_value_strategy.py  league_strategy.py  random_strategy.py  refined_value_random_strategy.py  sigmoid_strategy.py  smart_strategy.py  spending_analyzer.py  strategy_analyzer.py  strategy_config.py  strategy_registry.py  value_based_strategy.py  vor_strategy.py
tests/: __init__.py  conftest.py  run_tests.py  test_auction_budget.py  test_auction_enforcement.py  test_auction_sealed_bid.py  test_base.py  test_budget_violation.py  test_classes.py  test_data_api.py  test_f811_regressions.py  test_fantasypros.py  test_gridiron_sage.py  test_inflation_behavior.py  test_integer_budgets.py  test_integration.py  test_lab_results_db.py  test_lab_simulation_runner.py  test_lab_sleeper_scraper.py  test_market_inflation.py  test_multilevel_constraints.py  test_ping_format.py  test_project.py  test_roster_logic.py  test_runner.py  test_services.py  test_sprint7_regressions.py  test_sprint7b_regressions.py  test_sprint7c_regressions.py  test_sprint8_regressions.py  test_strategies.py  test_strategy_bids.py
utils/: __init__.py  cheatsheet_parser.py  market_tracker.py  path_utils.py  print_module.py  sleeper_cache.py
(+144 files in other folders)
