[project]
name = "pigskin-auction-draft"
version = "1.0.0"
description = "Advanced fantasy football auction draft tool with multiple bidding strategies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "colorama>=0.4.6",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pyyaml>=6.0",
]

[project.scripts]
pigskin = "cli.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "pytest-timeout>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "vulture>=2.11",
    "ruff>=0.3",
    "hypothesis>=6.100",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["venv*", "tests*", "lab*", "*.egg-info*"]

[tool.ruff]
line-length = 120
exclude = ["venv", "pigskin_auction_draft.egg-info", "lab", ".agents"]

[tool.ruff.lint]
# Match the existing flake8 logic-error gate:
# F4xx = import issues, F8xx = statement issues, E9xx = runtime, W605 = invalid escape
select = ["F401", "F811", "F541", "F841", "E9", "W605"]
