[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pigskin-lab"
version = "0.1.0"
description = "Experimental research lab for pigskin auction strategies and backtesting"
requires-python = ">=3.12"
dependencies = [
    "pigskin-auction-draft",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lab*"]
